--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "resend": "^4.0.0"
   },
   "devDependencies": {
